--- a/index.html
+++ b/index.html
@@ -5,8 +5,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no">
     <title>Home</title>
-    <!-- Latest compiled and minified CSS -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.10.0/css/bootstrap-select.min.css">
     <link href="css/styles.css" rel="stylesheet" type="text/css" />
     <link rel="apple-touch-icon" type="image/png" href="apple-touch-icon.png">
     <link rel="icon" href="favicon.ico">
@@ -110,7 +108,7 @@
                         <span class="em">Lorem ipsum dolor sit</span></a>
                 </div>
                 <div class="container-video embed-responsive embed-responsive-16by">
-                    <iframe width="100%" height="100%" src="https://www.youtube.com/embed/1WdxSWgRPFk?rel=0&amp;autoplay=1&amp;controls=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
+                  <iframe width="100%" height="100%" src="https://www.youtube.com/embed/1WdxSWgRPFk?rel=0&amp;autoplay=1&amp;controls=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
                 </div>
             </div>
         </section>
@@ -233,23 +231,31 @@
                 <div role="tabpanel" class="tab-pane" id="key-date">
                     <div class="tab-pane-content container">
                         <div class="progress">
-                            <span class="start-pointer">You’re here</span>
-                            <div class=""></div>
+                        <span class="start-pointer" style="left:60%">You’re here</span>
+                         <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%;">
+                            
+                            <div class="rage">
+                                <span class="rage1" ></span>
+                                <span class="rage2" ></span>
+                                <span class="rage3" ></span>
+                                <span class="rage4"></span>
+                            </div>
                         </div>
-                        <div class="info">
-                            <div class="info-item">
+                        </div>
+                        <div class="info clearfix">
+                            <div class="info-item item1">
                                 <div class="date"><span>4</span>APRIL</div>
                                 <div class="entrie-status">Entries Open</div>
                             </div>
-                            <div class="info-item">
+                            <div class="info-item item2">
                                 <div class="date"><span>5</span>May</div>
                                 <div class="entrie-status"> Entries Close</div>
                             </div>
-                            <div class="info-item">
+                            <div class="info-item item3">
                                 <div class="date"><span>17</span>May</div>
                                 <div class="entrie-status">Semi Finals</div>
                             </div>
-                            <div class="info-item">
+                            <div class="info-item item4">
                                 <div class="date"><span>6</span>June</div>
                                 <div class="entrie-status">Finals</div>
                             </div>
@@ -295,10 +301,10 @@ your idea</h1>
                             </div>
                             <div class="col-md-6 col-xs-12">
                                 <div class="right-action clearfix" id="accordion">
-                                    <a class="filter-button" role="button" data-toggle="collapse" data-parent="#entry-section" href="#all-category" aria-expanded="false" aria-controls="all-category">
+                                    <a class="filter-button  collapsed" role="button" data-toggle="collapse" data-parent="#entry-section" href="#all-category" aria-expanded="false" aria-controls="all-category">
                                         <span>Show All <br/>Categories <span class="sprites sprites-arrow-down"></span> </span>
                                     </a>
-                                    <a class="filter-button oneline" role="button" data-toggle="collapse" data-parent="#entry-section" href="#most-popular" aria-expanded="false" aria-controls="most-popular">
+                                    <a class="filter-button oneline collapsed" role="button" data-toggle="collapse" data-parent="#entry-section" href="#most-popular" aria-expanded="false" aria-controls="most-popular">
                                         <span> Most popular <span class="sprites sprites-arrow-down"></span></span>
                                     </a>
                                     <button type="submit" class="search-button">search <span class="circle-icon"><span class="sprites-arrow-down sprites"></span></span>
@@ -333,6 +339,8 @@ your idea</h1>
                     <div class="row">
                         <div class="col-md-3 col-xs-12 col-sm-6">
                             <div class="item">
+                            <a class="link" href="#"></a>
+                                <!-- link to product-->
                                 <div class="image">
                                     <div class="category-icon bg-yellow"><span class="icon-xo yellow"></span></div><img src="img/images/nescafe-headstart-homepage_03.jpg" alt="" /></div>
                                 <div class="description">Idea title goes here and it’s very very very extremely looong. So long.</div>
@@ -344,6 +352,8 @@ your idea</h1>
                         </div>
                         <div class="col-md-3 col-xs-12 col-sm-6">
                             <div class="item">
+                            <a class="link" href="#"></a>
+                                <!-- link to product-->
                                 <div class="image">
                                     <div class="category-icon bg-blue"><span class="icon-bush blue"></span></div><img src="img/images/nescafe-headstart-homepage_05.jpg" alt="" /></div>
                                 <div class="description">Idea title goes here and it’s very very very extremely looong. So long.</div>
@@ -355,6 +365,8 @@ your idea</h1>
                         </div>
                         <div class="col-md-3 col-xs-12 col-sm-6">
                             <div class="item">
+                            <a class="link" href="#"></a>
+                                <!-- link to product-->
                                 <div class="image">
                                     <div class="category-icon bg-green"><span class="icon-leaft green"></span></div><img src="img/images/nescafe-headstart-homepage_07.jpg" alt="" /></div>
                                 <div class="description">Idea title goes here and it’s very very very extremely looong. So long.</div>
@@ -366,6 +378,8 @@ your idea</h1>
                         </div>
                         <div class="col-md-3 col-xs-12 col-sm-6">
                             <div class="item">
+                                <a class="link" href="#"></a>
+                                <!-- link to product-->
                                 <div class="image">
                                     <div class="category-icon bg-yellow"><span class="icon-xo yellow"></span></div><img src="img/images/nescafe-headstart-homepage_09.jpg" alt="" /></div>
                                 <div class="description">Idea title goes here and it’s very very very extremely looong. So long.</div>
@@ -377,6 +391,8 @@ your idea</h1>
                         </div>
                         <div class="col-md-3 col-xs-12 col-sm-6">
                             <div class="item">
+                            <a class="link" href="#"></a>
+                                <!-- link to product-->
                                 <div class="image">
                                     <div class="category-icon bg-orange"><span class="icon-cause orange"></span></div><img src="img/images/nescafe-headstart-homepage_03.jpg" alt="" /></div>
                                 <div class="description">Idea title goes here and it’s very very very extremely looong. So long.</div>
@@ -388,6 +404,8 @@ your idea</h1>
                         </div>
                         <div class="col-md-3 col-xs-12 col-sm-6">
                             <div class="item">
+                            <a class="link" href="#"></a>
+                                <!-- link to product-->
                                 <div class="image">
                                     <div class="category-icon bg-blue"><span class="icon-bush blue"></span></div><img src="img/images/nescafe-headstart-homepage_05.jpg" alt="" /></div>
                                 <div class="description">Idea title goes here and it’s very very very extremely looong. So long.</div>
@@ -399,6 +417,8 @@ your idea</h1>
                         </div>
                         <div class="col-md-3 col-xs-12 col-sm-6">
                             <div class="item">
+                            <a class="link" href="#"></a>
+                                <!-- link to product-->
                                 <div class="image">
                                     <div class="category-icon bg-green"><span class="icon-leaft green"></span></div><img src="img/images/nescafe-headstart-homepage_07.jpg" alt="" /></div>
                                 <div class="description">Idea title goes here and it’s very very very extremely looong. So long.</div>
@@ -410,6 +430,8 @@ your idea</h1>
                         </div>
                         <div class="col-md-3 col-xs-12 col-sm-6">
                             <div class="item">
+                            <a class="link" href="#"></a>
+                                <!-- link to product-->
                                 <div class="image">
                                     <div class="category-icon bg-purple"><span class="icon-lap purple"></span></div><img src="img/images/nescafe-headstart-homepage_09.jpg" alt="" /></div>
                                 <div class="description">Idea title goes here and it’s very very very extremely looong. So long.</div>
@@ -470,7 +492,7 @@ your idea</h1>
     <script type="text/javascript" src="js/bootstrap.min.js"></script>
     <script type="text/javascript" src="js/bootstrap-tabcollapse.js"></script>
     <script type="text/javascript" src="js/fancyBox/jquery.fancybox.pack.js"></script>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/jquery-form-validator/2.2.8/jquery.form-validator.min.js"></script>
+   <script src="js/jquery.form-validator.min.js"></script>
     <script type="text/javascript" src="js/main.js"></script>
 </body>
 
